--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ h1{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 50px;
 }
+.mainSection {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
 .info-p{
 padding: 30px;
 font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -20,12 +26,11 @@ font-size: 22px;
 min-width: 300px;
 max-width: 500px;
 text-align: center;
-
-
 }
+
 .container{
 height: auto;
-background-color: rgb(38, 1, 80);
+background-color: rgb(22, 5, 41);
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -43,7 +48,14 @@ color: rgb(229, 219, 219);
     display: flex;
     justify-content: space-evenly;
 }
+.reset{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
 
+}
 #food-btn,
 #hobby-btn,
 #workout-btn {
@@ -51,4 +63,9 @@ color: rgb(229, 219, 219);
     font-size: 22px;
     background-color: rgb(38, 1, 80);
     color: beige;
+}
+
+#reset-btn {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 22px;
 }
